--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://danielbraga06.github.io/front-academy-starter-pack/",
+  "homepage": "front-academy-starter-pack/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
